dry + session time